@@ -1,8 +1,8 @@
 package com.starbucks.starvive.banner.application;
 
 import com.starbucks.starvive.banner.domain.Banner;
-import com.starbucks.starvive.banner.dto.in.BannerImageCreateRequestDto;
-import com.starbucks.starvive.banner.dto.in.BannerImageUpdateRequestDto;
+import com.starbucks.starvive.banner.dto.in.AddBannerImageRequestDto;
+import com.starbucks.starvive.banner.dto.in.UpdateBannerImageRequestDto;
 import com.starbucks.starvive.banner.dto.out.BannerImageResponseDto;
 import com.starbucks.starvive.banner.infrastructure.BannerImageRepository;
 import com.starbucks.starvive.common.exception.BaseException;
@@ -11,9 +11,12 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import static com.starbucks.starvive.common.domain.BaseResponseStatus.BANNER_NOT_FOUND;
+import java.util.stream.Collectors;
+
+import static com.starbucks.starvive.common.domain.BaseResponseStatus.*;
 
 @Slf4j
 @Service
@@ -23,47 +26,79 @@ public class BannerImageServiceImpl implements BannerImageService {
     private final BannerImageRepository bannerImageRepository;
     private final S3Uploader s3Uploader;
 
+    private static final String FOLDER_NAME = "banner";
+
     @Override
-    public UUID uploadBanner(MultipartFile image, BannerImageCreateRequestDto dto) {
-        String imageUrl = s3Uploader.upload(image, "banner");
-        Banner banner = bannerImageRepository.save(dto.toEntity(imageUrl));
-        return banner.getBannerId();
+    public UUID uploadBanner(MultipartFile image, AddBannerImageRequestDto dto) {
+        if (image == null || image.isEmpty()) {
+            throw new BaseException(S3_EMPTY_FILE_NAME);
+        }
+
+        String imageUrl = s3Uploader.upload(image, FOLDER_NAME);
+        Banner banner = buildBanner(imageUrl, dto);
+
+        return bannerImageRepository.save(banner).getBannerId();
     }
 
     @Override
-    public List<UUID> uploadMultipleBanners(List<MultipartFile> images, BannerImageCreateRequestDto dto) {
-        List<String> imageUrls = s3Uploader.uploadMultiple(images, "banner");
+    public List<UUID> uploadMultipleBanners(List<MultipartFile> images, AddBannerImageRequestDto dto) {
+        if (images == null || images.isEmpty()) {
+            throw new BaseException(S3_EMPTY_FILE_LIST);
+        }
 
-        return imageUrls.stream()
-                .map(url -> {
-                    Banner saved = bannerImageRepository.save(dto.toEntity(url));
-                    return saved.getBannerId();
-                })
-                .toList();
+        List<String> imageUrls = s3Uploader.uploadMultiple(images, FOLDER_NAME);
+        List<UUID> savedIds = new ArrayList<>();
+
+        for (String imageUrl : imageUrls) {
+            Banner banner = buildBanner(imageUrl, dto);
+            savedIds.add(bannerImageRepository.save(banner).getBannerId());
+        }
+
+        return savedIds;
     }
 
     @Override
     public List<BannerImageResponseDto> getAllBanners() {
         return bannerImageRepository.findAll().stream()
+                .filter(Banner::getActivated) // Soft delete 제외
                 .map(BannerImageResponseDto::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void updateBanner(UUID bannerId, MultipartFile image, BannerImageUpdateRequestDto dto) {
+    public void updateBannerImage(UUID bannerId, MultipartFile image, UpdateBannerImageRequestDto dto) {
         Banner banner = bannerImageRepository.findById(bannerId)
-                .orElseThrow(() -> new BaseException(BANNER_NOT_FOUND));
+                .orElseThrow(() -> new BaseException(NO_EXIST_BANNER));
 
-        String imageUrl = image != null ? s3Uploader.upload(image, "banner") : banner.getImageBannerUrl();
+        if (image != null && !image.isEmpty()) {
+            log.info("Updating banner image for bannerId: {}", bannerId);
+            String updatedUrl = s3Uploader.upload(image, FOLDER_NAME);
+            banner.updateImage(updatedUrl);
+        }
 
-        banner.update(imageUrl, dto.getImageBannerAlt(), dto.getLinkUrl(), dto.getPostedAt(), dto.getActivated());
+        banner.updateInfo(dto);
     }
 
     @Override
-    public void deleteBanner(UUID bannerId) {
+    public void deleteBannerImage(UUID bannerId) {
         Banner banner = bannerImageRepository.findById(bannerId)
-                .orElseThrow(() -> new BaseException(BANNER_NOT_FOUND));
-        s3Uploader.deleteFile(banner.getImageBannerUrl().substring(banner.getImageBannerUrl().lastIndexOf("/") + 1));
-        bannerImageRepository.delete(banner);
+                .orElseThrow(() -> new BaseException(NO_EXIST_BANNER));
+
+        if (banner.getImageBannerUrl() != null) {
+            s3Uploader.deleteFile(banner.getImageBannerUrl());
+        }
+
+        banner.softDelete();
+    }
+
+    // ✅ 공통 Banner 빌더
+    private Banner buildBanner(String imageUrl, AddBannerImageRequestDto dto) {
+        return Banner.builder()
+                .imageBannerUrl(imageUrl)
+                .imageBannerAlt(dto.getImageBannerAlt())
+                .linkUrl(dto.getLinkUrl())
+                .postedAt(dto.getPostedAt())
+                .activated(dto.isActivated())
+                .build();
     }
 }
